projects/vb6parse/snapshots/syntax/statements/system_interaction/delete_setting/deletesetting_with_parentheses.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/delete_setting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: DeleteSettingStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DeleteSettingKeyword
                  text: DeleteSetting
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: ParenthesizedExpression
                          children:
                            - kind: LeftParenthesis
                              text: (
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"MyApp\""
                            - kind: RightParenthesis
                              text: )
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: ParenthesizedExpression
                          children:
                            - kind: LeftParenthesis
                              text: (
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Settings\""
                            - kind: RightParenthesis
                              text: )
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: ParenthesizedExpression
                          children:
                            - kind: LeftParenthesis
                              text: (
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"WindowState\""
                            - kind: RightParenthesis
                              text: )
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
